--- a/CoypuTables/packages.config
+++ b/CoypuTables/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Coypu" version="2.7.0" targetFramework="net40" />
+  <package id="Coypu.Watin" version="2.2.0" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" />
   <package id="Newtonsoft.Json" version="4.0.6" />
+  <package id="Selenium.Support" version="2.39.0" targetFramework="net40" />
   <package id="Selenium.WebDriver" version="2.20.0" />
+  <package id="Selenium.WebDriver" version="2.39.0" targetFramework="net40" />
   <package id="WatiN" version="2.1.0" />
-  <package id="xunit" version="1.9.0.1566" />
-  <package id="xunit.extensions" version="1.9.0.1566" />
+  <package id="xunit" version="1.9.2" targetFramework="net40" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
 </packages>
